bug fixes on mobile fixed on about us page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -79,6 +79,7 @@ nav ul li:hover {
           transform: scale(1.1);
 }
 
+/*Media Queries*/
 footer {
   position: relative;
   /*Footer end just for styles only*/
@@ -557,7 +558,8 @@ main .moon-image {
 
 .about-us-main .about-us-image {
   position: relative;
-  width: 100%;
+  width: auto;
+  margin: auto;
   -o-object-fit: cover;
      object-fit: cover;
   -webkit-filter: brightness(0.75) contrast(150%);
@@ -565,9 +567,9 @@ main .moon-image {
 }
 
 .about-us-main .about-us-wrapper {
-  top: 30%;
-  left: 20%;
-  width: 50%;
+  top: 20%;
+  left: 5%;
+  width: 80%;
   position: absolute;
   color: red;
   display: -webkit-box;
@@ -579,7 +581,7 @@ main .moon-image {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 100px;
+  gap: 50px;
   background-color: rgba(0, 0, 0, 0.3);
   padding: 30px;
 }
@@ -609,7 +611,7 @@ main .moon-image {
   font-weight: bold;
   letter-spacing: 1px;
   margin-top: 10px;
-  margin-left: 25%;
+  margin-left: 45%;
   color: #FFFFFF;
   background-color: rgba(0, 0, 0, 0.6);
   border: 1px solid #FFFFFF;
@@ -623,18 +625,27 @@ main .moon-image {
 
 /*Read more section that only appears when event(Button) is clicked upon.*/
 .read-more-main {
+  position: relative;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   display: none;
 }
 
 .read-more-main .read-more-text {
-  width: 80%;
+  width: 60%;
+  font-size: 1.2rem;
   margin: auto;
   letter-spacing: 1px;
   word-spacing: 3px;
-  line-height: 30px;
+  line-height: 2.5;
   padding: 20px;
+}
+
+/*Media Queries*/
+@media only screen and (min-width: 1600px) {
+  .about-us-image {
+    width: 100% !important;
+  }
 }
 
 * {
