--- a/public/sass/_aboutus.scss
+++ b/public/sass/_aboutus.scss
@@ -4,21 +4,22 @@
 
     .about-us-image {
         position: relative;
-        width: 100%;
+        width: auto;
+        margin: auto;
         object-fit: cover;
         filter: brightness(.75) contrast(150%);
     }
 
     .about-us-wrapper {
-        top: 30%;
-        left: 20%;
-        width: 50%;
+        top: 20%;
+        left: 5%;
+        width: 80%;
         position: absolute;
         color: red;
         display: flex;
         align-items: flex-start;
         justify-content: center;
-        gap: 100px;
+        gap: 50px;
         background-color: rgba(0, 0, 0, .30);
         padding: 30px;
     }
@@ -48,7 +49,7 @@
         font-weight: bold;
         letter-spacing: 1px;
         margin-top: 10px;
-        margin-left: 25%;
+        margin-left: 45%;
         color: $color-white;
         background-color: rgba(0, 0, 0, .60);
         border: 1px solid $color-white;
@@ -65,20 +66,30 @@
 
     /*Read more section that only appears when event(Button) is clicked upon.*/
 .read-more-main {
+    position: relative;
     width: 100%;
 
     background-color: rgba(0, 0, 0, .20);
     display: none;
 
     .read-more-text {
-        width: 80%;
+        width: 60%;
+        font-size: 1.2rem;
         margin: auto;
         letter-spacing: 1px;
         word-spacing: 3px;
-        line-height: 30px;
+        line-height: 2.5;
         padding: 20px;
 
     }
     
 
+}
+
+/*Media Queries*/
+
+.about-us-image {
+    @media only screen and (min-width: 1600px) {
+        width: 100%!important;
+    }
 }
